@@ -1,2 +1,2 @@
-def my_view(context, request):
+def my_view(request):
     return {'project':'tutorial'}
