@@ -14,6 +14,17 @@ Bug Fixes
 - Tests now pass on Windows (no bugs found, but a few tests in the test suite
   assumed UNIX path segments in filenames).
 
+Documentation
+-------------
+
+- If you followed it to-the-letter, the ZODB+Traversal Wiki tutorial would
+  instruct you to run a test which would fail because the view callable
+  generated by the ``pyramid_zodb`` tutorial used a one-arg view callable,
+  but the test in the sample code used a two-arg call.
+
+- Updated ZODB+Traversal tutorial setup.py of all steps to match what's
+  generated by ``pyramid_zodb``.
+
 1.0a5 (2010-12-14)
 ==================
 
